Javascript day to day code
Javascript day to day code

--- a/26-myProfile.html
+++ b/26-myProfile.html
@@ -19,6 +19,10 @@
     <h2>My Hobbies</h2>
     <a href="">My Profile</a>
     <p>Project Description</p>
+    <footer>
+        
+    </footer>
     <script src="26-main.js"></script>
+
 </body>
 </html>
